# xerock

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
src/: arguments.cpp  arguments.hpp  main.cpp  version.hpp
src/apps/: init_apps.cpp  init_apps.hpp
src/apps/echo/: CMakeLists.txt  echo.hpp  parser.hpp  types.hpp
src/apps/echo/json/: defines.hpp  echo.cpp  parser.cpp
src/apps/main/: CMakeLists.txt  main.hpp  make.hpp  parser.hpp
src/apps/main/json/: defines.hpp  make.cpp  parser.cpp
src/apps/monitor/: CMakeLists.txt  executor.cpp  executor.hpp  make.hpp  monitor.cpp  monitor.hpp  parser.hpp  types.hpp
src/apps/monitor/json/: defines.hpp  make.cpp  parser.cpp
src/apps/serial/: CMakeLists.txt  container.hpp  make.hpp  parser.hpp  serial.cpp  serial.hpp  serial_type.cpp  serial_type.hpp  types.hpp
src/apps/serial/json/: defines.hpp  make.cpp  parser.cpp
src/apps/tcp_client/: CMakeLists.txt  make.hpp  make_message.hpp  parser.hpp  tcp_client.cpp  tcp_client.hpp  tcp_client_type.hpp  types.hpp
src/apps/tcp_client/json/: defines.hpp  make.cpp  parser.cpp
src/apps/tcp_server/: CMakeLists.txt  init_cb.cpp  make.hpp  parser.hpp  share_data.cpp  share_data.hpp  tcp_server.cpp  tcp_server.hpp  tcp_server_type.hpp  types.hpp
src/apps/tcp_server/json/: defines.hpp  make.cpp  parser.cpp
src/apps/udp_client/: CMakeLists.txt  make.hpp  make_message.hpp  parser.hpp  types.hpp  udp_client.cpp  udp_client.hpp  udp_client_type.hpp
src/apps/udp_client/json/: defines.hpp  make.cpp  parser.cpp
src/apps/udp_server/: CMakeLists.txt  make.hpp  parser.hpp  types.hpp  udp_server.cpp  udp_server.hpp  udp_server_type.cpp  udp_server_type.hpp
src/apps/udp_server/impl/: init_cb_impl.hpp
src/apps/udp_server/json/: defines.hpp  make.cpp  parser.cpp
src/core/: CMakeLists.txt  app.cpp  error.cpp  functions.cpp
src/core/include/core/: app.hpp  dispatcher.hpp  error.hpp  error_message.hpp  functions.hpp  helpers.hpp  message.hpp  propagator_websocket.hpp  types.hpp  websocket_session.hpp
src/core/include/core/json/: builder.hpp  defines.hpp  error_message_impl.hpp  factory.hpp  fail_message_impl.hpp  propagator_websocket_impl.hpp
src/core/json/: builder.cpp  factory.cpp  websocket_session.cpp
src/helpers/: load_certificate.cpp
src/helpers/include/: load_certificate.hpp
src/libs/: CMakeLists.txt
src/libs/byte_array/: CMakeLists.txt  byte_array.cpp
src/libs/byte_array/include/: byte_array.h
src/libs/my_async/examples/: tcp_server_echo_static_share_static_cb_main.cpp  tcp_server_simple_container_test.cpp  websocket_simple_echo_main.cpp
src/libs/my_async/examples/tcp_client/: tcp_client container.cpp  tcp_client_simple_container.cpp  tcp_echo_callback_client.cpp  tcp_echo_client.cpp  tcp_echo_static_callback_client.cpp
src/libs/my_async/examples/udp_client/: udp_client_simple_container.hpp  udp_echo_callback_client.cpp  udp_echo_client.cpp  udp_echo_static_callback_client.cpp
src/libs/my_async/examples/udp_server/: udp_server_callback_echo.cpp  udp_server_echo.cpp  udp_server_echo_simple_container.cpp  udp_server_static_callback_echo.cpp
src/libs/my_async/include/: my_async.hpp
src/libs/my_async/include/my_async/: traits.hpp
src/libs/my_async/include/my_async/listener/: container.hpp  detect_protocol_session.hpp  http_session.hpp  listener_base.hpp  listener_dual.hpp  listener_helper.hpp  listener_share.hpp  simple_container.hpp  types.hpp
src/libs/my_async/include/my_async/listener/impl/: container_impl.hpp  listener_concept_impl.hpp  listener_helper_impl.hpp  simple_container_impl.hpp
src/libs/my_async/include/my_async/serial/: container.hpp  serial_base.hpp  serial_callback.hpp  serial_exception.hpp  serial_static_callback.hpp  serial_util.hpp
src/libs/my_async/include/my_async/serial/impl/: container_impl.hpp  serial_base_impl.hpp  serial_callback_impl.hpp  serial_static_callback_impl.hpp
src/libs/my_async/include/my_async/tcp_client/: client_base.hpp  client_callback.hpp  client_static_callback.hpp  container.hpp  simple_container.hpp
src/libs/my_async/include/my_async/tcp_client/impl/: client_base_impl.hpp  client_concept_impl.hpp  container_impl.hpp  simple_container_impl.hpp
src/libs/my_async/include/my_async/tcp_server/: session_base.hpp  session_share_static_callback.hpp  session_static_callback.hpp  session_static_share_static_callback.hpp
src/libs/my_async/include/my_async/tcp_server/impl/: session_base_impl.hpp
src/libs/my_async/include/my_async/udp_client/: client_base.hpp  client_callback.hpp  client_static_callback.hpp  simple_container.hpp
src/libs/my_async/include/my_async/udp_server/: server_base.hpp  server_callback.hpp  server_static_callback.hpp  simple_container.hpp
src/libs/my_async/include/my_async/util/: callback.hpp  read_wait.hpp  static_callback.hpp  tcp_options.hpp
src/libs/my_async/include/my_async/websocket/: session_base.hpp  session_static_callback.hpp  session_static_callback_static_share.hpp
src/libs/my_async/obsolete/: listener_base_test.hpp
src/libs/my_async/src/: CMakeLists.txt  serial_util.cpp
src/libs/my_async/test/: serial_async_callback_test_main.cpp  serial_async_test_main.cpp  serial_utility_main.cpp  tcp_server_container_test.cpp  tcp_server_simple_echo_main.cpp  tcp_server_simple_echo_static_cb.cpp  websocket_callback_main.cpp  websocket_echo_all_main.cpp
src/libs/system_info/doc/: README.md
src/libs/system_info/include/: hardware_info.hpp  print_system.hpp  proc_info.hpp  system_types.hpp  system_util.hpp
src/libs/system_info/src/: CMakeLists.txt  hardware_info_unix.cpp  print_system.cpp  proc_info_unix.cpp  system_util.cpp
src/libs/system_info/test/: hardware_cpu_future_main.cpp  hardware_cpu_info_main.cpp  proc_info_main.cpp
src/libs/utility/include/types/: traits.hpp
src/libs/utility/include/util/: handler_helper.hpp  json_helper.hpp  shareable.hpp  static_shareable.hpp
src/libs/utility/src/: CMakeLists.txt  handler_helper.cpp  json_helper.cpp
src/libs/utility/test/: shareable_test_main.cpp  static_shareable_test_main.cpp
(+8 files in other folders)
